<resources>
    <string name="app_name">우리쌤 테이블</string>
    <string name="title_home"></string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hi">image</string>
    <string name="homeTitle">우리반 선생님의 \n똑똑한 메이커 테이블</string>

    <string name="card_maker">카드 만들기</string>
    <string name="lamp">메모하기</string>
    <string name="cabinet">물건 찾기</string>
    <string name="setting">설정</string>
    <string name="lampRow1">선택</string>
    <string name="lampRow2">작성시각</string>
    <string name="lampRow3">메모</string>
    <string name="check">CheckBox</string>
    <string name="deletebutton">deletebutton</string>
    <string name="plusbutton">plusbutton</string>
    <string name="editbutton">editbutton</string>
    <string name="sendtolamp">SendtoLamp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textNo">번호</string>
    <string name="datetime">datetime</string>
    <string name="content">content</string>
    <string name="number">number</string>
    <string name="title1">우리반 선생님의</string>
    <string name="title2">똑똑한 메이커 테이블</string>
    <string name="card">카드 만들기</string>
    <string name="memo">메모 램프</string>
    <string name="cabinet2">반짝 서랍장</string>
    <string name="textTitle">제목</string>
    <string name="addMemoContent">내용</string>
    <string name="addMemoTtiel">제목</string>
    <string name="saveButton">저장</string>
    <string name="backButton">돌아가기</string>
    <string name="addMemoEditor">쓰는 사람</string>
    <string name="addTitle">메모 추가</string>
    <string name="title">title</string>
    <string name="editTextTitle">메모 수정</string>
    <string name="name">Name</string>
    <string name="editTitle">Title</string>
    <string name="detailButton">세부정보 보기</string>
    <string name="onepagetitle">메모내용</string>
    <string name="onetexttitle">제목</string>
    <string name="onetextcontent">세부 내용</string>
    <string name="goback">돌아가기</string>
    <string name="edittexttitle">메모수정</string>
    <string name="content1">Content</string>
    <string name="memolamp">메모램프</string>
    <string name="findItem">물건찾기</string>
    <string name="where">그게 어디 있더라...?</string>
    <string name="manage">관리하기</string>
    <string name="cabinetTitle">그 서랍장</string>
    <string name="manageTitle">관리하기</string>
    <string name="findThings">물건 찾기</string>
    <string name="cabinet1">서랍장</string>
    <string name="space">공간</string>
    <string name="sendtocabinet">sendToCabinet</string>
    <string name="manageCabinet">서랍장 관리</string>
    <string name="theCabinet">선택한 서랍장:</string>
    <string name="nextbutton">nextButton</string>
    <string name="editItem">수정</string>
    <string name="example">예시</string>
    <string name="ofcabinet">서랍장의</string>
    <string name="ofcell">공간 속</string>
    <string name="ofStuff">물건은</string>
    <string name="ofEtc">기타 사항</string>
    <string name="addCabinet">사물함 추가</string>
    <string name="inserName">이름 입력</string>
    <string name="back">back</string>
    <string name="before">before</string>
    <string name="save">save</string>

</resources>