<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECF6D4"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="385dp"
        android:layout_height="157dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.447">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/uhbeenamsoyoung_bold"
            android:text="@string/title1"
            android:textColor="#413F43"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="395dp"
            android:layout_height="71dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="28dp"
            android:fontFamily="@font/uhbeenamsoyoung_bold"
            android:text="@string/title2"
            android:textColor="#413F43"
            android:textSize="38sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:orientation="horizontal"
        android:paddingBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.69">

        <Button
            android:id="@+id/cabinetButton"
            style="@android:style/Widget.Holo.Button.Small"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/uhbeenamsoyoung_normal"
            android:shadowColor="#403653"
            android:text="@string/cabinet"
            android:textColorLink="#403653"
            android:textSize="25sp" />

        <Button
            android:id="@+id/lampButton"
            style="@android:style/Widget.Holo.Button.Small"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/uhbeenamsoyoung_normal"
            android:text="@string/memo"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.787">

        <Button
            android:id="@+id/cardButton"
            style="@android:style/Widget.Holo.Button.Small"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="50dp"
            android:fontFamily="@font/uhbeenamsoyoung_normal"
            android:text="@string/card"
            android:textSize="25sp" />

        <Button
            android:id="@+id/settingsButton"
            style="@android:style/Widget.Holo.Button.Small"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/uhbeenamsoyoung_normal"
            android:text="@string/setting"
            android:textSize="25sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>