<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/recyclerView"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_marginStart="10dp"
    android:layout_marginLeft="10dp"
    android:background="@drawable/back_border"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:textColor="#757474">

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:layout_marginLeft="5dp"
        android:paddingEnd="10dip"
        android:paddingRight="10dip"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textNo"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_weight="1"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:text="@string/number"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="189dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#FFFFFF"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="sans-serif"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:text="@string/title" />


    <TextView
        android:id="@+id/textDate"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:paddingStart="10dip"
        android:paddingLeft="10dip"
        android:text="@string/datetime"
        android:textAlignment="center"
        android:textSize="12sp" />
</LinearLayout>