<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cabinet.CabinetMainFragment">
    <TextView
        android:id="@+id/textCabinetTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:fontFamily="@font/cookierun_bold"
        android:gravity="center_horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:shadowColor="@color/colorPrimaryDark"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="5.5"
        android:text="@string/cabinet2"
        android:textAlignment="center"
        android:textColor="@color/GoldenFizz"
        android:textSize="53sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_conversion_absoluteHeight="57dp"
        tools:layout_conversion_absoluteWidth="178dp" />

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:paddingTop="70dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/textCabinetTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/findButton"
            android:layout_width="190dp"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/b21"
            android:contentDescription="@string/findItem"
            android:fontFamily="@font/gonggothic_bold"
            android:paddingTop="17dp"
            android:paddingBottom="15dp"
            android:scaleType="fitCenter"
            android:text="@string/findItem"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp" />

        <Button
            android:id="@+id/manageButton"
            android:layout_width="190dp"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/b21"
            android:contentDescription="@string/findItem"
            android:fontFamily="@font/gonggothic_bold"
            android:paddingTop="17dp"
            android:paddingBottom="15dp"
            android:scaleType="centerInside"
            android:text="@string/manage"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/CabinetExplanation"
            android:layout_width="200dp"
            android:layout_height="38dp"
            android:layout_marginLeft="190dp"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/cookierun_regular"
            android:gravity="center_horizontal"
            android:paddingLeft="8dp"
            android:text="@string/where"
            android:textColor="#A1A1A1"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>