<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".memo.ListFragment">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_gravity="center"
        app:layout_constraintStart_toStartOf="parent">

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:stretchColumns="3"
            app:layout_constraintBottom_toTopOf="@id/memoList"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TableRow
                android:id="@+id/FirstRow"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:layout_column="1"
                    android:layout_gravity="center"
                    android:background="@color/Astronaut"
                    android:fontFamily="@font/gonggothic_medium"
                    android:gravity="center"
                    android:paddingLeft="10dip"
                    android:paddingRight="10dip"
                    android:text="@string/lampRow1"
                    android:textAlignment="center"
                    android:textColor="@color/myWhite" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:layout_column="2"
                    android:layout_gravity="center"
                    android:layout_marginEnd="2dp"
                    android:layout_marginRight="2dp"
                    android:background="@color/Astronaut"
                    android:fontFamily="@font/gonggothic_medium"
                    android:gravity="center"
                    android:paddingLeft="10dip"
                    android:paddingRight="10dip"
                    android:text="@string/textNo"
                    android:textAlignment="center"
                    android:textColor="@color/myWhite" />

                <TextView
                    android:layout_width="176dp"
                    android:layout_height="30dp"
                    android:layout_column="3"
                    android:layout_marginEnd="2dp"
                    android:layout_marginRight="2dp"
                    android:background="@color/Astronaut"
                    android:fontFamily="@font/gonggothic_medium"
                    android:gravity="center"
                    android:text="@string/textTitle"
                    android:textAlignment="center"
                    android:textColor="@color/myWhite" />

                <TextView
                    android:layout_width="78dp"
                    android:layout_height="30dp"
                    android:layout_column="4"
                    android:layout_gravity="center"
                    android:background="@color/Astronaut"
                    android:fontFamily="@font/gonggothic_medium"
                    android:gravity="center"
                    android:paddingLeft="10dip"
                    android:paddingRight="10dip"
                    android:text="@string/lampRow2"
                    android:textAlignment="center"
                    android:textColor="@color/myWhite" />

            </TableRow>
        </TableLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/memoList"
            android:layout_width="match_parent"
            android:layout_height="340dp"
            android:layout_marginStart="-5dp"
            android:layout_marginLeft="-5dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_conversion_absoluteHeight="194dp"
            tools:layout_conversion_absoluteWidth="411dp" />


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="7dp"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/memoList"
            android:layout_marginStart="7dp">

            <ImageButton
                android:id="@+id/deleteButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:background="#ffffff"
                android:contentDescription="@string/deletebutton"
                android:focusable="true"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical"
                android:scaleType="fitCenter"
                android:src="@drawable/delete"
                android:layout_marginRight="10dp" />

            <ImageButton
                android:id="@+id/addButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"

                android:layout_gravity="center_vertical"
                android:background="#ffffff"
                android:contentDescription="@string/plusbutton"
                android:focusable="true"
                android:orientation="horizontal"
                android:scaleType="centerCrop"
                android:src="@drawable/add"/>


            <ImageButton
                android:id="@+id/lightOn"
                style="@android:style/Widget.Holo.ImageButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="120dp"
                android:layout_marginLeft="120dp"
                android:layout_marginRight="10dp"
                android:background="#ffffff"
                android:clickable="true"
                android:contentDescription="@string/sendtolamp"
                android:focusable="true"
                android:orientation="horizontal"
                android:scaleType="centerCrop"
                android:src="@drawable/light2"/>


        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>