<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myWhite"

    tools:context=".memo.EditFragment">

    <TextView
        android:id="@+id/editTextTitle"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:fontFamily="@font/uhbeenamsoyoung_bold"
        android:text="@string/edittexttitle"
        android:textColor="#656565"
        android:textSize="38sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/editEditor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize = "15sp"

        android:fontFamily="@font/paybooc_font"
        android:inputType="textPersonName"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTitle"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize = "15sp"

        android:fontFamily="@font/paybooc_font"
        android:inputType="textPersonName"
        android:text="@string/editTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEditor"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize = "15sp"
        android:fontFamily="@font/paybooc_font"
        android:gravity="top|start"
        android:inputType="textMultiLine|textPersonName"
        android:minLines="10"
        android:text="@string/content1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTitle"
        android:importantForAutofill="no" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editContent">

        <ImageButton
            android:id="@+id/editBackButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:scaleType="fitCenter"
            android:background="@color/myWhite"
            android:src="@drawable/back2"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/editSaveButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="150dp"
            android:layout_marginLeft="150dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal"
            android:scaleType="fitCenter"
            android:background="@color/myWhite"
            android:src="@drawable/save2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="parent"
            tools:layout_editor_absoluteY="151dp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>