<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/whole_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:elevation="10dp"
    android:background="#ffffff">
    <LinearLayout
        android:id="@+id/linear9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="end">


    <TextView
        android:id="@+id/cabinetN"
        android:layout_width="wrap_content"
        android:minWidth="50dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:fontFamily="@font/paybooc_medium"
        android:textSize="16sp"
        android:layout_marginEnd="10dp"
        android:text="@string/example"
        android:textColor="#777777"
        android:layout_marginRight="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gonggothic_medium"
            android:textColor="#626262"
            android:textSize="19sp"
            android:text="@string/ofcabinet"

            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/linear9"
        app:layout_constraintStart_toStartOf="@id/linear9"
        android:gravity="end">
        <TextView
            android:id="@+id/cellN"
            android:layout_width="wrap_content"
            android:minWidth="50dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/paybooc_medium"
            android:textSize="16sp"
            android:text="@string/example"

            android:textColor="#777777"
            android:layout_marginRight="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gonggothic_medium"
            android:textColor="#626262"
            android:textSize="19sp"
            android:text="@string/ofcell"

            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/linear8"
        app:layout_constraintStart_toStartOf="@id/linear8"
        android:gravity="start">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gonggothic_medium"
            android:textColor="#626262"
            android:textSize="19sp"
            android:text="@string/ofStuff"

            />
        <TextView
            android:id="@+id/itemN"
            android:layout_width="wrap_content"
            android:minWidth="50dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/paybooc_medium"
            android:textSize="16sp"
            android:text="@string/example"
            android:textColor="#777777"
            android:layout_marginStart="10dp" />



    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/linear7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/linear7"
        android:gravity="start">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gonggothic_medium"
            android:textColor="#626262"
            android:textSize="19sp"
            android:text="@string/ofEtc"

            />
        <TextView
            android:id="@+id/etcN"
            android:layout_width="wrap_content"
            android:minWidth="50dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/paybooc_medium"
            android:textSize="16sp"
            android:text="@string/example"
            android:textColor="#777777"
            android:layout_marginStart="10dp" />



    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>